--- a/app/src/main/res/layout/fragment_costa.xml
+++ b/app/src/main/res/layout/fragment_costa.xml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".controlador.FragmentCosta">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="COSTA" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/costa"
+        android:textSize="18sp">
 
-</FrameLayout>
+    </TextView>
+
+    <ImageButton
+        android:id="@+id/btnEncebollado"
+        android:layout_width="match_parent"
+        android:layout_height="245dp"
+        android:scaleType="fitStart"
+        android:src="@drawable/encebollado" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="CEVICHE DE CAMARON"
+        android:textSize="18sp" />
+
+    <ImageButton
+        android:id="@+id/btnCeviche"
+        android:layout_width="match_parent"
+        android:layout_height="318dp"
+        android:scaleType="fitStart"
+        android:src="@drawable/ceviche" />
+
+
+</LinearLayout>
