--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#B0D20B</color>
     <color name="colorPrimaryDark">#B0D20B</color>
-    <color name="colorAccent">#FFD54F</color>
+    <color name="colorAccent">#1F6BDF</color>
 </resources>
