--- a/app/src/main/res/layout/fragment_costa.xml
+++ b/app/src/main/res/layout/fragment_costa.xml
@@ -10,6 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="@string/costa"
         android:textSize="18sp">
@@ -27,6 +28,7 @@
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="CEVICHE DE CAMARON"
         android:textSize="18sp" />
@@ -34,9 +36,9 @@
     <ImageButton
         android:id="@+id/btnCeviche"
         android:layout_width="match_parent"
-        android:layout_height="318dp"
+        android:layout_height="245dp"
         android:scaleType="fitStart"
-        android:src="@drawable/ceviche" />
+        android:src="@drawable/cev1" />
 
 
 </LinearLayout>
