--- a/app/src/main/res/layout/activity_tab__peru.xml
+++ b/app/src/main/res/layout/activity_tab__peru.xml
@@ -13,18 +13,25 @@
         android:background="@color/colorAccent">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/costa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Monday" />
+            android:icon="@drawable/tabicon"
+            android:text="COSTA" />
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/sierra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tuesday" />
+            android:icon="@drawable/tabicon"
+            android:text="SIERRA" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wednesday" />
+
     </com.google.android.material.tabs.TabLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPeru"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
